samples/_failures_safe/1761509404_df325d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46c20a24.c: In function ‘main’:
./samples/SAFE/__tmp_46c20a24.c:160:31: error: expected ‘]’ at end of input
  160 |     input[strcspn(input, "\n")
      |                               ^
      |                               ]
./samples/SAFE/__tmp_46c20a24.c:160:5: error: expected declaration or statement at end of input
  160 |     input[strcspn(input, "\n")
      |     ^~~~~
